Added Written Component, Jack and Troy

--- a/aaaaa.qmd
+++ b/aaaaa.qmd
@@ -57,3 +57,11 @@ JoinedData <- PCAffectedLong |>
 
 ```
 
+## Section 1 Written Component
+
+In this analysis, we use data from the Freedom House Organization’s Freedom Index which is an aggregate score representing a country’s political and civil freedoms in a given year. A country’s freedom score is based on a scale from 1(most free) to 7(least free). The political rights section of a country’s Freedom Index score is based on their electoral process, political pluralism and participation. The civil liberties category is based on the people’s Freedom of Expression and Belief, Associational and Organizational Rights, Rule of Law and Personal Autonomy and Individual Rights. We also use data from the Plane Crash Affected Annual Number dataset from gapminder. This dataset includes information on the total number of people affected, injured or killed in air accidents during the given year.  
+
+Our analysis includes the years 1972 – 2008 with 121 countries represented. Each country in a given year is an observational unit.  
+
+We expect that there could be a correlation between high FH values (low degrees of freedom) and the number of people affected by plane crashes. Hypothetically, more political freedom would lead to more safety accountability. 
+
