--- a/aaaaa.qmd
+++ b/aaaaa.qmd
@@ -14,7 +14,7 @@ execute:
   warning: false
 ---
 
-# Section 1: Project Proposal + Data
+## Section 1: Project Proposal + Data
 
 [Download PlaneCrashAffected_AnnualNumber.csv data](../stat331-finalproject/PlaneCrashAffected_AnnualNumber.csv)
 
@@ -22,20 +22,21 @@ execute:
 
 ```{r setup}
 library(tidyverse)
+library(gganimate)
 library(knitr)
 library(kableExtra)
 planeCrashAffected <- read.csv("PlaneCrashAffected_AnnualNumber.csv")
 FH <- read.csv("freedix_fh.csv")
 ```
 
-## 1.1 Data Cleaning
+### 1.1 Data Cleaning
 ```{r cleanup}
 colnames(planeCrashAffected) <- str_remove(colnames(planeCrashAffected), "^X")
 colnames(FH) <- str_remove(colnames(FH), "^X")
 
 ```
 
-## 1.2 Pivoting Longer
+### 1.2 Pivoting Longer
 ```{r pivoting}
 PCAffectedLong <- planeCrashAffected |>
   pivot_longer(cols = -country,
@@ -50,18 +51,72 @@ FHLong <- FH |>
 
 ```
 
-## 1.3 Joining Datasets
+### 1.3 Joining Datasets
 ```{r join}
 JoinedData <- PCAffectedLong |>
   inner_join(FHLong, by = c("country", "year"))
 
 ```
 
-## Section 1 Written Component
+### Section 1 Written Component
 
 In this analysis, we use data from the Freedom House Organization’s Freedom Index which is an aggregate score representing a country’s political and civil freedoms in a given year. A country’s freedom score is based on a scale from 1(most free) to 7(least free). The political rights section of a country’s Freedom Index score is based on their electoral process, political pluralism and participation. The civil liberties category is based on the people’s Freedom of Expression and Belief, Associational and Organizational Rights, Rule of Law and Personal Autonomy and Individual Rights. We also use data from the Plane Crash Affected Annual Number dataset from gapminder. This dataset includes information on the total number of people affected, injured or killed in air accidents during the given year.  
 
 Our analysis includes the years 1972 – 2008 with 121 countries represented. Each country in a given year is an observational unit.  
 
 We expect that there could be a correlation between high FH values (low degrees of freedom) and the number of people affected by plane crashes. Hypothetically, more political freedom would lead to more safety accountability. 
+
+## Section 2: Linear Regression
+
+### 2.1 Data Visualization
+```{r}
+
+JoinedData <- JoinedData |> 
+  drop_na(FH, num_people_affected)
+
+ggplot(JoinedData, aes(x = FH, y = num_people_affected)) +
+  geom_point(alpha = 0.5) +
+  geom_smooth(method = "lm", se = FALSE, color = "blue") +
+  #scale_y_continuous(limits = c(0, 1)) +
+  labs(title = "Political Freedom & Plane Crashes",
+       subtitle = "Plane Crashes By Affectees",
+       x = "Freedom Index",
+       y = ""
+       )+
+  theme_minimal()
+```
+
+
+```{r}
+JoinedData |>
+  mutate(decade = floor(as.numeric(year) / 10) * 10) |>
+  
+  ggplot(aes(x = FH, y = num_people_affected, color = as.factor(decade))) +
+  geom_smooth(method = "lm", se = FALSE) +
+  labs(title = "Political Freedom & Plane Crash by Decade",
+       subtitle = "Plane Crashes Affectees",
+       x = "Freedom Index",
+       y = "",
+       color = "Decade") +
+  theme_minimal()
+
+
+```
+### 2.2 Linear Regression
+
+```{r}
+
+countryAverages <- JoinedData |>
+  group_by(country) |>
+  summarize(avg_FH = mean(FH, na.rm = TRUE),
+            avg_people_affected = mean(num_people_affected, na.rm = TRUE))
+
+
+countryAverages_lm <- lm(avg_people_affected ~ avg_FH, data = countryAverages)
+
+
+summary(countryAverages_lm)
+
+```
+
 
